Fixed bug where the blue center bar on the timeline was overlapped by dates. Timeline colors are now sourced from camlist data. Timeline now filters the ranges view by your current camera or camera group. Timeline colors are now sorted by HSL values instead of RGB values.

--- a/ui3/ui3.css
+++ b/ui3/ui3.css
@@ -3126,7 +3126,7 @@ div.invisibleLabel
 	height: 100%;
 	width: 2px;
 	background-color: rgba(0,213,255,0.75);
-	z-index: 1;
+	z-index: 2;
 }
 
 .timelineError
